syntax = "proto3";
package queue;
option go_package="github.com/genshinsim/gcsim/backend/pkg/services/queue";

import "protos/model/db.proto";

service WorkQueue {
    rpc Populate (PopulateReq) returns (PopulateResp);
    rpc Get (GetReq) returns (GetResp);
    rpc Complete (CompleteReq) returns (CompleteResp);
}

message PopulateReq {
    repeated model.ComputeWork data = 1;
}

message PopulateResp {
    repeated string ids = 1;
}

message GetReq {
    
}

message GetResp {
    model.ComputeWork data = 1;
}

message CompleteReq {
    string id = 1;
}

message CompleteResp {

}